# spectr

./: .env.example  .gitignore  AUTOPILOT_RUN.md  CLAUDE.md  LICENSE  README.md  TODOS.md  package.json  pyproject.toml
.claude/: launch.json
.claude/commands/: spectr.md
claude_skill/: install.sh
claude_skill/spectr/: SKILL.md
frontend/: .env.example  middleware.ts  next.config.js  package-lock.json  package.json  vercel.json
frontend/app/: CopyableCommand.tsx  FAQ.tsx  HomeClient.tsx  InstallTabs.tsx  SiteNav.tsx  SpectrBackground.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
frontend/components/: BillingCTA.tsx  BrandingForm.tsx  GhostSkeleton.tsx  PendingSamplesTable.tsx  SpecPreview.tsx  StatusTracker.tsx  Toast.tsx  UploadZone.tsx
frontend/hooks/: useToast.ts
frontend/lib/: access-token.ts  auth-project.ts  email.ts  env.ts  extract-phone.ts  paywall.ts  project-columns.ts  stripe.ts  supabase-browser.ts  supabase-server.ts  supabase-ssr.ts  supabase.ts  trigger-worker.ts  types.ts  zip.ts
frontend/public/: moodboard.html  waitlist-preview.html
frontend/scripts/: sync-specs.mjs
mcp_server/: Dockerfile  README.md
promo/: ANIMATION_SPEC.md  package-lock.json  package.json
promo/src/: SpectreIdentity.tsx  SpectrePromo.tsx  SpectreSignal.tsx  index.tsx  (+1 more)
spectr_mcp/: README.md  __init__.py  appstore.py  cli.py  pipeline.py  server.py
supabase/: schema.sql
worker/: constants.py  extract.py  fast_spec.py  local_worker.py  main.py  nixpacks.toml  notify.py  pipeline.py  prompts.py  requirements.txt
(+280 files in other folders)
