[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectr-mcp"
version = "0.1.1"
description = "Spectr MCP server — turn a screen recording into a production-ready spec.md, from inside Claude Code / Cursor / any MCP client."
readme = "spectr_mcp/README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Spectr", email = "hello@spectr.to" }]
keywords = ["mcp", "anthropic", "claude", "spec", "react-native", "expo", "design-tokens"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.0.0",
  "anthropic>=0.28.0",
  "Pillow>=10.0.0",
  "imagehash>=4.3.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://spectr.to"
Repository = "https://github.com/Meliwat/spectr"
Issues = "https://github.com/Meliwat/spectr/issues"

[project.scripts]
spectr-mcp = "spectr_mcp.server:main"
spectr-cli = "spectr_mcp.cli:main"

[tool.setuptools.packages.find]
include = ["spectr_mcp*", "worker*"]
exclude = ["frontend*", "promo*", "supabase*", "docs*", "tests*"]
